Fix #payment-options overflow in IE

--- a/app/css/downtime.styl
+++ b/app/css/downtime.styl
@@ -1,6 +1,9 @@
 $opacity = 0.3;
 $bg-color = #f7f7f7;
 
+#payment-options
+  overflow-x: hidden;
+
 .payment-option[down=true],
 .next-option[down=true]
   background-color: $bg-color;
